apps/media/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Sonarr
    gethomepage.dev/description: TV show management
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sonarr.png
    gethomepage.dev/href: https://sonarr.${SECRET_DOMAIN}
    gethomepage.dev/widget.type: sonarr
    gethomepage.dev/widget.url: http://sonarr.media
    gethomepage.dev/widget.key: "${SECRET_SONARR_API_KEY}"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`sonarr.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
